--- a/templates/control.templ
+++ b/templates/control.templ
@@ -19,8 +19,8 @@ templ Control() {
             <div style="display:flex; flex-direction:column; margin:0.5rem; padding:0.75rem;">
                 <h4>Question Controls</h4>
                 <div style="display:flex; width:100%;">
-                    <button style="flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:pink" onclick="clearTimes()">Clear</button>
-                    <button style="flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:lightgreen" onclick="next()">Next</button>
+                    <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:pink" onclick="clearTimes()">Clear</button>
+                    <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:lightgreen" onclick="next()">Next</button>
                 </div>
             </div>
         </div>
