--- a/templates/control.templ
+++ b/templates/control.templ
@@ -73,7 +73,7 @@ templ Control() {
             }).then(response => response.text()).then(data => {
                 questionNum = Number(data);
                 console.log(data)
-                if (questionNum) {
+                if (!isNaN(questionNum)) {
                     document.getElementById('qnum').innerText = questionNum;
                 }
             });
