leaderboard is displayed on control page. may show host info here instead

--- a/templates/control.templ
+++ b/templates/control.templ
@@ -27,6 +27,7 @@ templ Control() {
                 <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:lightgray" onclick="clearTimes()">Clear</button>
             </div>
         </div>
+        @Leaderboard()
     </main>
     <script>
         fetch('/question-number').then(response => response.text()).then(data => {
