--- a/templates/control.templ
+++ b/templates/control.templ
@@ -27,7 +27,7 @@ templ Control() {
                     <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:pink" onclick="prev()">Prev</button>
                     <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:lightgreen" onclick="next()">Next</button>
                 </div>
-                <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:lightgray" onclick="reserBuzzers()">Reset Buzzers</button>
+                <button style="cursor:pointer; flex:1; margin:0.5rem; padding:0.5rem; width:fit; background-color:lightgray" onclick="resetBuzzers()">Reset Buzzers</button>
             </div>
         </div>
         @Leaderboard()
@@ -56,6 +56,7 @@ templ Control() {
         function zeroAmount() {
             document.getElementById('amount').value = 0;
         }
+
         function updateUserScore() {
             document.getElementById('password-error').style.opacity = 0;
             const password = document.getElementById('password').value;
@@ -78,9 +79,10 @@ templ Control() {
             });
             zeroAmount();
         }
-        function resetBuzzers() {
+
+        function postBackend(route) {
             document.getElementById('password-error').style.opacity = 0;
-            fetch('/clear', {
+            fetch(route, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -88,59 +90,28 @@ templ Control() {
                 body: JSON.stringify({
                     password: document.getElementById('password').value
                 })
-            }).then(response => response.status).then(data => {                
-                if (data !== 200) {
+            }).then(response => {
+                if (response.status === 200) {
+                    return route !== 'clear' ?response.text() : NaN;
+                } else {
                     document.getElementById('password-error').style.opacity = 1;
+                    return NaN
+                }
+            }).then(data => {
+                questionNum = Number(data);
+                if (!isNaN(questionNum)) {
+                    document.getElementById('qnum').innerText = questionNum;
                 }
             });
+        }
+        function resetBuzzers() {
+            postBackend('/clear');
         }
         function next() {
-            document.getElementById('password-error').style.opacity = 0;
-            fetch('/next', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    password: document.getElementById('password').value
-                })
-            }).then(response => {
-                if (response.status === 200) {
-                    return response.text();
-                } else {
-                    document.getElementById('password-error').style.opacity = 1;
-                    return NaN
-                }
-            }).then(data => {
-                questionNum = Number(data);
-                if (!isNaN(questionNum)) {
-                    document.getElementById('qnum').innerText = questionNum;
-                }
-            });
+            postBackend('/next');
         }
         function prev() {
-            document.getElementById('password-error').style.opacity = 0;
-            fetch('/prev', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    password: document.getElementById('password').value
-                })
-            }).then(response => {
-                if (response.status === 200) {
-                    return response.text();
-                } else {
-                    document.getElementById('password-error').style.opacity = 1;
-                    return NaN
-                }
-            }).then(data => {
-                questionNum = Number(data);
-                if (!isNaN(questionNum)) {
-                    document.getElementById('qnum').innerText = questionNum;
-                }
-            });
+            postBackend('/prev');
         }
     </script>
 }
