can tab to go button

--- a/templates/home.templ
+++ b/templates/home.templ
@@ -5,7 +5,7 @@ templ Home() {
         <h1>Enter your name</h1>
         <div style="width:fit;">
             <input type="text" style="padding:1rem; margin:0.5rem; font-size:1.25rem;" id="name" placeholder="Name" />
-            <div onclick="start()" style="user-select:none; cursor:pointer; display:flex; flex-direction:column; justify-content:center; text-align:center; font-size:2rem; margin:0.5rem; border-radius:0.5rem; background-color:palegreen;">→</div>
+            <div id="go" onclick="start()" tabindex="0" style="user-select:none; cursor:pointer; display:flex; flex-direction:column; justify-content:center; text-align:center; font-size:2rem; margin:0.5rem; border-radius:0.5rem; background-color:palegreen;">→</div>
         </div>
         <script>
             function start() {
