--- a/templates/buzzedIn.templ
+++ b/templates/buzzedIn.templ
@@ -17,27 +17,38 @@ templ BuzzedIn() {
     <audio id="audio" src="/buzzer.mp3"></audio>
     <script>
         let numBuzzedIn = 0;
-        function updateBuzzedIn() {
-            fetch('/buzzed-in', {method:"POST"})
-                .then(response => response.json())
-                .then(data => {
-                    const buzzedInBody = document.getElementById('buzzed-in');
-                    const emptyList = numBuzzedIn === 0;
-                    numBuzzedIn = data.length;
-                    buzzedInBody.innerHTML = `
-                        ${data.map((player) => 
-                                `<tr style="display:table-row; padding:0.25rem; margin:0.25rem; border-radius:0.25rem;">
-                                    <td style="display:table-cell; text-align:center; padding:0.5rem;">${player[0]}</td>
-                                    <td style="display:table-cell; text-align:center; padding:0.5rem;">${player[1]}</td>
-                                </tr>`
-                        ).join('')}
-                    `;
-                    if (emptyList && numBuzzedIn > 0) {
-                        document.getElementById('audio').play();
-                    }
-                });
+
+        const loc = window.location;
+
+        const destination = `${loc.protocol === 'https:' ? 'wss:' : 'ws:'}//${loc.host}/buzzed-in`;
+
+        const socket = new WebSocket(destination);
+
+        socket.addEventListener('open', (event) => {
+            console.log('WebSocket connection opened');
+        });
+
+        socket.addEventListener('message', (event) => {
+            // update page with the new data
+            updateData(JSON.parse(event.data));
+        });
+
+        socket.addEventListener('close', (event) => {
+            console.log('WebSocket connection closed');
+        });
+
+        function updateData(data) {
+            const tableBody = document.getElementById("buzzed-in");
+
+            // update the table
+            tableBody.innerHTML = `
+                ${data.map((player) => 
+                        `<tr style="display:table-row; padding:0.25rem; margin:0.25rem; border-radius:0.25rem;">
+                            <td style="display:table-cell; text-align:center; padding:0.5rem;">${player[0]}</td>
+                            <td style="display:table-cell; text-align:center; padding:0.5rem;">${player[1]}</td>
+                        </tr>`
+                ).join('')}
+            `;
         }
-        updateBuzzedIn();
-        setInterval(updateBuzzedIn, 100);
     </script>
 }
